Update COURSERA - Hands-on LAB, week 3 - App. Data Science Capstone, Build a Dashboard Application with Plotly Dash.ipynb

--- a/COURSERA - Hands-on LAB, week 3 - App. Data Science Capstone, Build a Dashboard Application with Plotly Dash.ipynb
+++ b/COURSERA - Hands-on LAB, week 3 - App. Data Science Capstone, Build a Dashboard Application with Plotly Dash.ipynb
@@ -23,8 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"C:/Users/fava_/OneDrive/LUCA_Documents/IT/PYTHON/PyExercises/DATI\")          # set the working directory"
    ]
   },
   {
@@ -97,7 +95,7 @@
     "import plotly.express as px\n",
     "\n",
     "# Read the airline data into pandas dataframe\n",
-    "spacex_df = pd.read_csv(\"spacex_launch_dash.csv\")\n",
+    "spacex_df = pd.read_csv(\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBM-DS0321EN-SkillsNetwork/datasets/spacex_launch_dash.csv\")\n",
     "max_payload = spacex_df['Payload Mass (kg)'].max()\n",
     "min_payload = spacex_df['Payload Mass (kg)'].min()\n",
     "\n",
